--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio Helaman Rodrigues</title>
-</head>
-<body>
-    <h1>Welcome to my portfolio!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Assignment portal for Helaman Rodrigues in WDD 331: Web Development at Brigham Young University - Idaho"
+    />
+    <title>Helaman Rodrigues Portfólio</title>
+    <link rel ="stylesheet" href="css/indexnormalize.css">
+    <link rel="stylesheet" href="css/indexsmall.css">
+    <link rel="stylesheet" href="css/indexmedium.css">
+    <link rel="shortcut icon" href="images/myicon.ico">
+  </head>
+  <body>
+    <!-- <header>
+      <img src="images/myself thumb.jpg" alt="A picture of myself"/>
+      <h1>Helaman Rodrigues</h1>
+    </header>-->
+    <main>
+        <section>
+          <h1>Portfólio</h1>
+        </section>
+      </main>
+    <nav>
+      <ul>
+        <li>Week 01:<a href="week01/index.html">Review Webpage</a></li>
+        <li>Week 02:<a href="week02/quiz02.html">Selectors</a></li>
+        <li>Week 03:<a href="week03/scss-demo.html">Scass to CSS</a>/<a href="week03/week01.html">Review Webpage with Scass</a></li>
+        <li>Week 05:<a href="week05/test.html">Css Utilities</a></li>
+      </ul>
+    </nav>
+    <footer>
+      &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil |
+      <p>Last Updated: <span id="lastmod"></span></p>
+    </footer>
+    <script src="js/currentdate.js"></script>
+  </body>
 </html>
