--- a/Notes-From-WDD330-master/w07.html
+++ b/Notes-From-WDD330-master/w07.html
@@ -64,7 +64,7 @@
 
     <footer>
         &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil |
-        <a href="https://helamanrodrigues.github.io/portfolio/index.html">Portal Home Page</a> |
+        <a href="https://helamanrodrigues.github.io/portfolio/WDD230/">Portal Home Page</a> |
         <a href="https://www.byui.edu/online">BYU Online Learning</a>
         <p>Last Updated: <span id="lastmod"></span></p>
     </footer>
