adding home portal page link into the projects

--- a/Notes-From-WDD330-master/Api Travel/index.html
+++ b/Notes-From-WDD330-master/Api Travel/index.html
@@ -199,7 +199,7 @@
 <!-- FOOTER HERE -->   
 		<footer>
 			&copy; <span id="currentyear"></span>
-			| Helaman Rodrigues | São Paulo, Brasil |
+			| Helaman Rodrigues | São Paulo, Brasil | <a style="color:aliceblue" href="https://helamanrodrigues.github.io/portfolio">Portal Home Page</a>
 		</footer>
 		<!-- JAVASCRIPTS-->
 		<script defer src="js/getCoords.js"></script>
