--- a/WDD130/aboutme.html
+++ b/WDD130/aboutme.html
@@ -92,7 +92,7 @@
 
     <footer>
       <p class="social-2">
-        &copy; 2020 Nomadstrip - Helaman Rodrigues - WDD130-15
+        &copy; 2020 Nomadstrip - Helaman Rodrigues - <a style="color:#444444" href="https://helamanrodrigues.github.io/portfolio">Home Portal Page</a>
       </p>
       <div class="social">
         <a href="https://pt-br.facebook.com/helama.rodrigues" target="_blank"
