--- a/WDD230/final_project/index.html
+++ b/WDD230/final_project/index.html
@@ -152,7 +152,10 @@
       </div>
     </div>
     <div class="copyright">
-      &copy; 2021 Helaman Rodrigues  
+      &copy; 2021 Helaman Rodrigues 
+      <p>
+        <a href="https://helamanrodrigues.github.io/portfolio">Home Portal Page</a>
+      </p>
       <p>Weather Data provided by
         <a href="https://https://openweathermap.org/">OpenWeatherMap.org</a>
       </p>
