--- a/WDD230/lesson11/fishhaven.html
+++ b/WDD230/lesson11/fishhaven.html
@@ -133,7 +133,7 @@
         	&copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil |
         	<a href="https://www.byui.edu/online">BYU Online Learning</a>
         	<p>Last Updated: <span id="lastmod"></span></p>
-        	<a href="https://helamanrodrigues.github.io/helamanrodrigues.git.io/WDD230/">Portal Home Page</a>
+        	<a href="https://helamanrodrigues.github.io/portfolio">Portal Home Page</a>
     	</footer>
 		<script src="js/currentdate.js"></script>   
 		<script src="js/scripts.js"></script>
