--- a/WDD230/final_project/directory.html
+++ b/WDD230/final_project/directory.html
@@ -110,6 +110,9 @@
     </div>
     <div class="copyright">
       &copy; 2021 Helaman Rodrigues  
+      <p>
+        <a href="https://helamanrodrigues.github.io/portfolio">Home Portal Page</a>
+      </p>
       <p>Weather Data provided by
         <a href="https://https://openweathermap.org/">OpenWeatherMap.org</a>
       </p>
