--- a/WDD230/lesson11/stormcenter.html
+++ b/WDD230/lesson11/stormcenter.html
@@ -142,7 +142,7 @@
             &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil |
             <a href="https://www.byui.edu/online">BYU Online Learning</a>
             <p>Last Updated: <span id="lastmod"></span></p>
-            <a href="https://helamanrodrigues.github.io/helamanrodrigues.git.io/WDD230/">Portal Home Page</a>
+            <a href="https://helamanrodrigues.github.io/portfolio">Portal Home Page</a>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>
