updating the css navigation bar in project 04

--- a/WDD130/aboutme.html
+++ b/WDD130/aboutme.html
@@ -16,7 +16,7 @@
         />
       </div>
       <nav>
-        <ul>
+        <ul class="navigation">
           <li><a href="index.html">Home</a></li>
           <li><a href="experiences.html">Experiences</a></li>
           <!-- this is my first childpage -->
