--- a/WDD130/aboutus.html
+++ b/WDD130/aboutus.html
@@ -15,7 +15,7 @@
           <img src="https://i.pinimg.com/736x/3d/b3/8d/3db38d9ee82b467124b6fa665aa9ac90.jpg" alt="Nomadstrip logo">
       </div>
         <nav>
-            <ul>
+            <ul class="navigation">
               <li><a href="index.html">Home</a></li>
               <li><a href="experiences.html">Experiences</a></li> <!-- this is my first childpage -->
               <li><a href="aboutus.html">About Us</a></li>  <!-- this is my second childpage -->
