fixing grid on project 04 aboutme

--- a/WDD130/aboutme.html
+++ b/WDD130/aboutme.html
@@ -40,16 +40,9 @@
       </div>
 
       <div class="aboutme-style-grid">
-        <h1 class="aboutme-title-1">About Me</h1>
-        <img
-          class="image-me"
-          alt="Me"
-          src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2FWhatsApp%20Image%202020-08-16%20at%2020.34.12.jpeg?v=1600282287498"
-          width="200"
-          heigth="500"
-        />
-        <h2 class="aboutme-headline-1">Helaman Rodrigues</h2>
-        <h2 class="aboutme-headline-2">Hela</h2>
+        <h2 class="aboutme-title-1">About Me</h2>
+  
+        <h3 class="aboutme-headline-1">Helaman Rodrigues</h3>
         <p class="aboutme-paragraph-1">
           Hello World! It so nice to meet all of you, so here is my little
           introduction:
@@ -87,6 +80,9 @@
           So this is a little about me, if all of you have any questions, feel
           free to ask.
         </p>
+
+        <img class="image-me" alt="Me" src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2FWhatsApp%20Image%202020-08-16%20at%2020.34.12.jpeg?v=1600282287498" width="200" heigth="500"/> 
+      
       </div>
     </main>
 
