update footer e home project 04

--- a/WDD130/experiences.html
+++ b/WDD130/experiences.html
@@ -103,7 +103,7 @@
   </main>
   
   <footer> 
-    <p class="social-2"> &copy; 2020 Dry Oar - Helaman Rodrigues - <a style="color:#444444" href="https://helamanrodrigues.github.io/portfolio">Home Portal Page</a> </p>
+    <p class="social-2"> &copy; 2020 Nomadstrip - Helaman Rodrigues - <a style="color:#444444" href="https://helamanrodrigues.github.io/portfolio">Home Portal Page</a> </p>
     <div class="social">
       <a href="https://pt-br.facebook.com/helama.rodrigues" target="_blank"><img src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2Ffacebook.png?1602201461430" alt="facebook icon"></a>
       <a href="https://www.instagram.com/h_rodrigues97/" target="_blank"><img src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2Finstagram.png?1602201468812" alt="instagram icon"></a>
