update footer of project 04 entirely

--- a/WDD130/index.html
+++ b/WDD130/index.html
@@ -93,6 +93,7 @@
       <a href="https://www.instagram.com" target="_blank"><img src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2Finstagram.png?1602201468812" alt="instagram icon"></a>
       <a href="https://twitter.com/" target="_blank"><img src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2Ftwitter.png?1602201478189" alt="twitter icon"></a>
       <a href="https://www.youtube.com/" target="_blank"><img src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2Fyoutube.png?1602201483110" alt="youtube icon"></a>
+      <a href="https://pinterest.com/" target="_blank"><img src="https://cdn.glitch.com/61015617-7cdb-47db-8c8f-f2f880772c51%2Fpinterest.png?1602201474329" alt="pinterest icon"></a>
     </div>
   </footer>
   
