updating instructions css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav>
       <ul>
         <li>Project 01:<a href="WDD230/final_project/index.html">Sampa Business</a>/<a href="WDD230/spbusiness.html">Instructions to use the app</a></li>
-        <li>Project 02:<a href="WDD230/lesson11/index.html">Idaho Town Information</a>/<a href="WDD230/lesson11/idahotown.html">Instructions to use the app</a></li>
+        <li>Project 02:<a href="WDD230/lesson11/index.html">Idaho Town Information</a>/<a href="WDD230/idahotown.html">Instructions to use the app</a></li>
         <li>Project 03:<a href="WDD330/Api Travel/index.html">Api Travel</a>/<a href="WDD330/w07.html">Instructions to use the app</a></li>
         <li>Project 04:<a href="WDD130/index.html">Nomads Trip Website</a></li>
       </ul>
