updating for large view my portfolio homepage

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <link rel ="stylesheet" href="css/indexnormalize.css">
     <link rel="stylesheet" href="css/indexsmall.css">
     <link rel="stylesheet" href="css/indexmedium.css">
+    <link rel="stylesheet" href="css/indexlarge.css">
     <link rel="shortcut icon" href="images/portfolio-icon.ico">
   </head>
   <body>
-    <!-- <header>
-      <img src="images/myself thumb.jpg" alt="A picture of myself"/>
-      <h1>Helaman Rodrigues</h1>
-    </header>-->
     <header>
-        <h1>Helaman Rodrigues</h1>
+      <img src="images/myself.jpeg" alt="A picture of myself"/>
+      <h1>Helaman Rodrigues</h1>
     </header>
     <main>
         <section>
@@ -35,7 +33,7 @@
       </ul>
     </nav>
     <footer>
-      &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil |
+      &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil 
       <p>Last Updated: <span id="lastmod"></span></p>
     </footer>
     <script src="js/currentdate.js"></script>
