updating the small view in my portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,49 @@
         <section>
           <h1>Portfólio</h1>
         </section>
-      </main>
+        <div id="allProjectInfo">
+          <article>
+              <figure class="townInfoImg">
+                  <img src="images/sampaproject.jpg" alt="Sampa Business Project" loading="lazy">
+              </figure>
+              <span class="p01">
+                <p>Project 01</p>
+                <p><a href="WDD230/final_project/index.html">Sampa Business</a></p>
+                <p><a href="WDD230/spbusiness.html">Instructions to use the app</a></p>
+              </span>
+          </article>
+          <article>
+              <figure class="townInfoImg">
+                  <img src="images/idahotownproject.jpg" alt="Idaho Town Project" loading="lazy">
+              </figure>
+              <span class="p02">
+                <p>Project 02</p>
+                <p><a href="WDD230/lesson11/index.html">Idaho Town Information</a></p>
+                <p><a href="WDD230/idahotown.html">Instructions to use the app</a></p>
+              </span>
+          </article>
+          <article>
+              <figure class="townInfoImg">
+                  <img src="images/apitravelproject.jpg" alt="Api Travel Project" loading="lazy">
+              </figure>
+              <span class="p03">
+                <p>Project 03</p>
+                <p><a href="WDD330/Api Travel/index.html">Api Travel</a></p>
+                <p><a href="WDD330/w07.html">Instructions to use the app</a></p>
+              </span>
+          </article>
+          <article>
+            <figure class="townInfoImg">
+                <img src="images/nomadstripproject.jpg" alt="Nomads Trip Project" loading="lazy">
+            </figure>
+            <span class="p04">
+              <p>Project 04</p>
+              <a href="WDD130/index.html">Nomads Trip Website</a>
+            </span>
+          </article>
+        </div>
+    </main>
+    <!--
     <nav>
       <ul>
         <li>Project 01:<a href="WDD230/final_project/index.html">Sampa Business</a>/<a href="WDD230/spbusiness.html">Instructions to use the app</a></li>
@@ -32,6 +74,7 @@
         <li>Project 04:<a href="WDD130/index.html">Nomads Trip Website</a></li>
       </ul>
     </nav>
+    -->
     <footer>
       &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil 
       <p>Last Updated: <span id="lastmod"></span></p>
