--- a/index.html
+++ b/index.html
@@ -25,44 +25,53 @@
         </section>
         <div id="allProjectInfo">
           <article>
-              <figure class="townInfoImg">
+              <figure class="projectInfoImg">
                   <img src="images/sampaproject.jpg" alt="Sampa Business Project" loading="lazy">
               </figure>
               <span class="p01">
-                <p>Project 01</p>
+                <p><strong>Project 01</strong></p>
                 <p><a href="WDD230/final_project/index.html">Sampa Business</a></p>
                 <p><a href="WDD230/spbusiness.html">Instructions to use the app</a></p>
               </span>
           </article>
           <article>
-              <figure class="townInfoImg">
+              <figure class="projectInfoImg">
                   <img src="images/idahotownproject.jpg" alt="Idaho Town Project" loading="lazy">
               </figure>
               <span class="p02">
-                <p>Project 02</p>
+                <p><strong>Project 02</strong></p>
                 <p><a href="WDD230/lesson11/index.html">Idaho Town Information</a></p>
                 <p><a href="WDD230/idahotown.html">Instructions to use the app</a></p>
               </span>
           </article>
           <article>
-              <figure class="townInfoImg">
+              <figure class="projectInfoImg">
                   <img src="images/apitravelproject.jpg" alt="Api Travel Project" loading="lazy">
               </figure>
               <span class="p03">
-                <p>Project 03</p>
+                <p><strong>Project 03</strong></p>
                 <p><a href="WDD330/Api Travel/index.html">Api Travel</a></p>
                 <p><a href="WDD330/w07.html">Instructions to use the app</a></p>
               </span>
           </article>
           <article>
-            <figure class="townInfoImg">
+            <figure class="projectInfoImg">
                 <img src="images/nomadstripproject.jpg" alt="Nomads Trip Project" loading="lazy">
             </figure>
             <span class="p04">
-              <p>Project 04</p>
+              <p><strong>Project 04</strong></p>
               <a href="WDD130/index.html">Nomads Trip Website</a>
             </span>
           </article>
+        </div>
+
+        <div id="articleArea">
+          <h3>About me</h3>
+          <figure class="articleImg">
+              <img src="images/me.jpeg" alt="Picture of myself" loading="lazy">
+          </figure>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit!</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit!</p>
         </div>
     </main>
     <!--
