change the size of the images

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Assignment portal for Helaman Rodrigues in WDD 331: Web Development at Brigham Young University - Idaho"
+      content="Portfolio Helaman Rodrigues"
     />
-    <title>Helaman Rodrigues Portfólio</title>
+    <title>Helaman Rodrigues Portfolio</title>
     <link rel ="stylesheet" href="css/indexnormalize.css">
     <link rel="stylesheet" href="css/indexsmall.css">
     <link rel="stylesheet" href="css/indexmedium.css">
@@ -21,12 +21,12 @@
     </header>
     <main>
         <section>
-          <h1>Portfólio</h1>
+          <h1>Portfolio</h1>
         </section>
         <div id="allProjectInfo">
           <article>
               <figure class="projectInfoImg">
-                  <img src="images/sampaproject.jpg" alt="Sampa Business Project" loading="lazy">
+                  <img src="images/sampaproject.jpg" alt="Sampa Business Project">
               </figure>
               <span class="p01">
                 <p><strong>Project 01</strong></p>
@@ -36,7 +36,7 @@
           </article>
           <article>
               <figure class="projectInfoImg">
-                  <img src="images/idahotownproject.jpg" alt="Idaho Town Project" loading="lazy">
+                  <img src="images/idahotownproject.jpg" alt="Idaho Town Project">
               </figure>
               <span class="p02">
                 <p><strong>Project 02</strong></p>
@@ -46,7 +46,7 @@
           </article>
           <article>
               <figure class="projectInfoImg">
-                  <img src="images/apitravelproject.jpg" alt="Api Travel Project" loading="lazy">
+                  <img src="images/apitravelproject.jpg" alt="Api Travel Project">
               </figure>
               <span class="p03">
                 <p><strong>Project 03</strong></p>
@@ -56,7 +56,7 @@
           </article>
           <article>
             <figure class="projectInfoImg">
-                <img src="images/nomadstripproject.jpg" alt="Nomads Trip Project" loading="lazy">
+                <img src="images/nomadstripproject.jpg" alt="Nomads Trip Project">
             </figure>
             <span class="p04">
               <p><strong>Project 04</strong></p>
@@ -68,25 +68,15 @@
         <div id="articleArea">
           <h3>About me</h3>
           <figure class="articleImg">
-              <img src="images/me.jpeg" alt="Picture of myself" loading="lazy">
+              <img src="images/me.jpeg" alt="Picture of myself">
           </figure>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit!</p>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium animi vitae aliquid sit laborum, a asperiores repellendus sapiente et nulla fuga provident voluptate quis reprehenderit porro cum dolores cupiditate? Velit!</p>
         </div>
     </main>
-    <!--
-    <nav>
-      <ul>
-        <li>Project 01:<a href="WDD230/final_project/index.html">Sampa Business</a>/<a href="WDD230/spbusiness.html">Instructions to use the app</a></li>
-        <li>Project 02:<a href="WDD230/lesson11/index.html">Idaho Town Information</a>/<a href="WDD230/idahotown.html">Instructions to use the app</a></li>
-        <li>Project 03:<a href="WDD330/Api Travel/index.html">Api Travel</a>/<a href="WDD330/w07.html">Instructions to use the app</a></li>
-        <li>Project 04:<a href="WDD130/index.html">Nomads Trip Website</a></li>
-      </ul>
-    </nav>
-    -->
+    
     <footer>
       &copy; <span id="currentyear"></span> | Helaman Rodrigues | São Paulo, Brasil 
-      <p>Last Updated: <span id="lastmod"></span></p>
     </footer>
     <script src="js/currentdate.js"></script>
   </body>
